[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cache-helper"
authors = [
    { name="YCharts", email="developers@ycharts.com" },
]
description = "A redis-backed autocompleter for Django projects."
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "cache",
    "django"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "Django >=3.2.*, <4.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ycharts/django_cache_helper"

[tool.setuptools]
packages = [
    "cache_helper",
]

[tool.setuptools.dynamic]
version = {attr = "cache_helper.VERSION"}
